@@ -19,23 +19,15 @@ tasks.withType<JavaCompile> {
         "-Xlint:-processing",
         "-Xlint:-incubating",
         "-Xlint:-classfile",
-        "-Werror",
-        "--add-modules", "jdk.incubator.vector"
+        "-Werror"
     ))
 }
 
 tasks.withType<Test> {
-    jvmArgs("--add-modules", "jdk.incubator.vector")
     useJUnitPlatform()
 }
 
 dependencies {
     implementation(project(":models-runtime"))
     implementation(project(":models-backend-purejava"))
-    implementation("org.slf4j:slf4j-api:2.0.16")
-    runtimeOnly("ch.qos.logback:logback-classic:1.5.15")
-}
-
-jmh {
-    jvmArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
 }
